OLC2_ 202100316/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    false
    true

Grammar

Rule 0     S' -> s
Rule 1     s -> block
Rule 2     block -> block instruccion
Rule 3     block -> instruccion
Rule 4     instruccion -> print PUNTOCOMA
Rule 5     instruccion -> ifinstruction
Rule 6     instruccion -> declaration
Rule 7     instruccion -> assignment
Rule 8     instruccion -> whileinstruction
Rule 9     instruccion -> instancia PUNTOCOMA
Rule 10    instruccion -> operadores PUNTOCOMA
Rule 11    instruccion -> forinstruction
Rule 12    instruccion -> breakstmt PUNTOCOMA
Rule 13    instruccion -> continuestmt
Rule 14    instruccion -> arraydeclaration
Rule 15    instruccion -> functionstmt
Rule 16    instruccion -> call
Rule 17    instruccion -> returnstmt
Rule 18    instruccion -> pusheo
Rule 19    instruccion -> switch_statement
Rule 20    instruccion -> constante
Rule 21    instruccion -> interfacecreation
Rule 22    instruccion -> interdeclaration
Rule 23    instruccion -> assigmentarray
Rule 24    print -> CONSOLE PUNTO LOG PARIZQ expressionList PARDER
Rule 25    declaration -> VAR ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
Rule 26    constante -> CONST ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
Rule 27    assignment -> VAR ID IGUAL expresion PUNTOCOMA
Rule 28    constante -> CONST ID IGUAL expresion PUNTOCOMA
Rule 29    arraydeclaration -> VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expresion PUNTOCOMA
Rule 30    expresion -> CORIZQ expressionList CORDER
Rule 31    expresion -> ID PUNTO LENGHT
Rule 32    expresion -> ID PUNTO INDEXOF PARIZQ expresion PARDER
Rule 33    expresion -> ID PUNTO POP PARIZQ PARDER
Rule 34    pusheo -> ID PUNTO PUSH PARIZQ expresion PARDER PUNTOCOMA
Rule 35    expresion -> ID PUNTO JOIN PARIZQ PARDER
Rule 36    instancia -> ID IGUAL expresion
Rule 37    operadores -> expresion MAS MAS
Rule 38    type -> NUMBER
Rule 39    type -> FLOAT
Rule 40    type -> STRING
Rule 41    type -> BOOLEAN
Rule 42    type -> ID
Rule 43    type -> type CORIZQ CORDER
Rule 44    whileinstruction -> WHILE PARIZQ expresion PARDER CHR_IZQ block CHR_DER
Rule 45    forinstruction -> FOR PARIZQ declaration expresion PUNTOCOMA operadores PARDER CHR_IZQ block CHR_DER
Rule 46    expresion -> PARSEINT PARIZQ expresion PARDER
Rule 47    expresion -> PARSEFLOAT PARIZQ expresion PARDER
Rule 48    expresion -> expresion PUNTO TOSTRING PARIZQ PARDER
Rule 49    expresion -> ID PUNTO TOSTRING PARIZQ PARDER
Rule 50    expresion -> TYPEOF expresion
Rule 51    ifinstruction -> IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE CHR_IZQ block CHR_DER
Rule 52    ifinstruction -> IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE ifinstruction
Rule 53    ifinstruction -> IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER
Rule 54    switch_statement -> SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement default_case CHR_DER
Rule 55    switch_statement -> SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement CHR_DER
Rule 56    cases_statement -> cases_statement case_statement
Rule 57    cases_statement -> case_statement
Rule 58    case_statement -> CASE expresion DOSPUNTOS block
Rule 59    default_case -> DEFAULT DOSPUNTOS block
Rule 60    call -> ID PARIZQ expressionList PARDER PUNTOCOMA
Rule 61    call -> ID PARIZQ PARDER PUNTOCOMA
Rule 62    functionstmt -> FUNC ID funcparams functype CHR_IZQ block CHR_DER
Rule 63    interfacecreation -> INTERFACE ID CHR_IZQ attributeList CHR_DER
Rule 64    interdeclaration -> VAR ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
Rule 65    interdeclaration -> CONST ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
Rule 66    interfaceContent -> interfaceContent COMA ID DOSPUNTOS expresion
Rule 67    interfaceContent -> ID DOSPUNTOS expresion
Rule 68    attributeList -> attributeList ID DOSPUNTOS type PUNTOCOMA
Rule 69    attributeList -> ID DOSPUNTOS type PUNTOCOMA
Rule 70    funcparams -> PARIZQ paramsList PARDER
Rule 71    funcparams -> PARIZQ PARDER
Rule 72    paramsList -> paramsList COMA ID DOSPUNTOS type
Rule 73    paramsList -> ID DOSPUNTOS type
Rule 74    functype -> DOSPUNTOS type
Rule 75    functype -> <empty>
Rule 76    returnstmt -> RETURN expresion PUNTOCOMA
Rule 77    returnstmt -> RETURN PUNTOCOMA
Rule 78    expresion -> expresion MAS expresion
Rule 79    expresion -> expresion MENOS expresion
Rule 80    expresion -> expresion POR expresion
Rule 81    expresion -> expresion DIVIDIDO expresion
Rule 82    expresion -> expresion MOD expresion
Rule 83    expresion -> ID PARIZQ expressionList PARDER
Rule 84    expresion -> ID PARIZQ PARDER
Rule 85    expresion -> expresion MENORQUE expresion
Rule 86    expresion -> expresion MAYORQUE expresion
Rule 87    expresion -> expresion MENORIGUAL expresion
Rule 88    expresion -> expresion MAYORIGUAL expresion
Rule 89    expresion -> expresion TERN expresion DOSPUNTOS expresion
Rule 90    expresion -> expresion AND expresion
Rule 91    expresion -> expresion OR expresion
Rule 92    expresion -> NOT expresion
Rule 93    expresion -> expresion IGUALDAD expresion
Rule 94    expresion -> expresion DIFERENTE expresion
Rule 95    expresion -> MENOS expresion
Rule 96    expresion -> PARIZQ expresion PARDER
Rule 97    expresion -> ID PUNTO LCASE PARIZQ PARDER
Rule 98    expresion -> ID PUNTO UPCASE PARIZQ PARDER
Rule 99    expresion -> ENTERO
Rule 100   expresion -> BOOLEANO
Rule 101   expresion -> CADENA
Rule 102   expresion -> listArray
Rule 103   expresion -> DECIMAL
Rule 104   continuestmt -> CONTINUE PUNTOCOMA
Rule 105   breakstmt -> BREAK
Rule 106   expressionList -> expressionList COMA expresion
Rule 107   expressionList -> expresion
Rule 108   assigmentarray -> listArray2 IGUAL expresion PUNTOCOMA
Rule 109   listArray2 -> listArray2 CORIZQ expresion CORDER
Rule 110   listArray2 -> listArray2 PUNTO ID
Rule 111   listArray2 -> ID
Rule 112   listArray -> listArray CORIZQ expresion CORDER
Rule 113   listArray -> listArray PUNTO ID
Rule 114   listArray -> ID

Terminals, with rules where they appear

AND                  : 90
BOOLEAN              : 41
BOOLEANO             : 100
BREAK                : 105
CADENA               : 101
CASE                 : 58
CHAR                 : 
CHR_DER              : 44 45 51 51 52 53 54 55 62 63 64 65
CHR_IZQ              : 44 45 51 51 52 53 54 55 62 63 64 65
COMA                 : 66 72 106
CONSOLE              : 24
CONST                : 26 28 65
CONTINUE             : 104
CORDER               : 29 30 43 109 112
CORIZQ               : 29 30 43 109 112
DECIMAL              : 103
DEFAULT              : 59
DIFERENTE            : 94
DIVIDIDO             : 81
DOSPUNTOS            : 25 26 29 58 59 64 65 66 67 68 69 72 73 74 89
ELSE                 : 51 52
ENTERO               : 99
FLOAT                : 39
FOR                  : 45
FUNC                 : 62
ID                   : 25 26 27 28 29 31 32 33 34 35 36 42 49 60 61 62 63 64 64 65 65 66 67 68 69 72 73 83 84 97 98 110 111 113 114
IF                   : 51 52 53
IGUAL                : 25 26 27 28 29 36 64 65 108
IGUALDAD             : 93
INDEXOF              : 32
INTERFACE            : 63
JOIN                 : 35
LCASE                : 97
LENGHT               : 31
LOG                  : 24
MAS                  : 37 37 78
MAYORIGUAL           : 88
MAYORQUE             : 86
MENORIGUAL           : 87
MENORQUE             : 85
MENOS                : 79 95
MOD                  : 82
NOT                  : 92
NUMBER               : 38
OR                   : 91
PARDER               : 24 32 33 34 35 44 45 46 47 48 49 51 52 53 54 55 60 61 70 71 83 84 96 97 98
PARIZQ               : 24 32 33 34 35 44 45 46 47 48 49 51 52 53 54 55 60 61 70 71 83 84 96 97 98
PARSEFLOAT           : 47
PARSEINT             : 46
POP                  : 33
POR                  : 80
PUNTO                : 24 31 32 33 34 35 48 49 97 98 110 113
PUNTOCOMA            : 4 9 10 12 25 26 27 28 29 34 45 60 61 64 65 68 69 76 77 104 108
PUSH                 : 34
RETURN               : 76 77
STRING               : 40
SWITCH               : 54 55
TERN                 : 89
TOSTRING             : 48 49
TYPEOF               : 50
UPCASE               : 98
VAR                  : 25 27 29 64
WHILE                : 44
error                : 
false                : 
true                 : 

Nonterminals, with rules where they appear

arraydeclaration     : 14
assigmentarray       : 23
assignment           : 7
attributeList        : 63 68
block                : 1 2 44 45 51 51 52 53 58 59 62
breakstmt            : 12
call                 : 16
case_statement       : 56 57
cases_statement      : 54 55 56
constante            : 20
continuestmt         : 13
declaration          : 6 45
default_case         : 54
expresion            : 25 26 27 28 29 32 34 36 37 44 45 46 47 48 50 51 52 53 54 55 58 66 67 76 78 78 79 79 80 80 81 81 82 82 85 85 86 86 87 87 88 88 89 89 89 90 90 91 91 92 93 93 94 94 95 96 106 107 108 109 112
expressionList       : 24 30 60 83 106
forinstruction       : 11
funcparams           : 62
functionstmt         : 15
functype             : 62
ifinstruction        : 5 52
instancia            : 9
instruccion          : 2 3
interdeclaration     : 22
interfaceContent     : 64 65 66
interfacecreation    : 21
listArray            : 102 112 113
listArray2           : 108 109 110
operadores           : 10 45
paramsList           : 70 72
print                : 4
pusheo               : 18
returnstmt           : 17
s                    : 0
switch_statement     : 19
type                 : 25 26 29 43 68 69 72 73 74
whileinstruction     : 8

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . block
    (2) block -> . block instruccion
    (3) block -> . instruccion
    (4) instruccion -> . print PUNTOCOMA
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . declaration
    (7) instruccion -> . assignment
    (8) instruccion -> . whileinstruction
    (9) instruccion -> . instancia PUNTOCOMA
    (10) instruccion -> . operadores PUNTOCOMA
    (11) instruccion -> . forinstruction
    (12) instruccion -> . breakstmt PUNTOCOMA
    (13) instruccion -> . continuestmt
    (14) instruccion -> . arraydeclaration
    (15) instruccion -> . functionstmt
    (16) instruccion -> . call
    (17) instruccion -> . returnstmt
    (18) instruccion -> . pusheo
    (19) instruccion -> . switch_statement
    (20) instruccion -> . constante
    (21) instruccion -> . interfacecreation
    (22) instruccion -> . interdeclaration
    (23) instruccion -> . assigmentarray
    (24) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER
    (51) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE CHR_IZQ block CHR_DER
    (52) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE ifinstruction
    (53) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER
    (25) declaration -> . VAR ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
    (27) assignment -> . VAR ID IGUAL expresion PUNTOCOMA
    (44) whileinstruction -> . WHILE PARIZQ expresion PARDER CHR_IZQ block CHR_DER
    (36) instancia -> . ID IGUAL expresion
    (37) operadores -> . expresion MAS MAS
    (45) forinstruction -> . FOR PARIZQ declaration expresion PUNTOCOMA operadores PARDER CHR_IZQ block CHR_DER
    (105) breakstmt -> . BREAK
    (104) continuestmt -> . CONTINUE PUNTOCOMA
    (29) arraydeclaration -> . VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expresion PUNTOCOMA
    (62) functionstmt -> . FUNC ID funcparams functype CHR_IZQ block CHR_DER
    (60) call -> . ID PARIZQ expressionList PARDER PUNTOCOMA
    (61) call -> . ID PARIZQ PARDER PUNTOCOMA
    (76) returnstmt -> . RETURN expresion PUNTOCOMA
    (77) returnstmt -> . RETURN PUNTOCOMA
    (34) pusheo -> . ID PUNTO PUSH PARIZQ expresion PARDER PUNTOCOMA
    (54) switch_statement -> . SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement default_case CHR_DER
    (55) switch_statement -> . SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement CHR_DER
    (26) constante -> . CONST ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
    (28) constante -> . CONST ID IGUAL expresion PUNTOCOMA
    (63) interfacecreation -> . INTERFACE ID CHR_IZQ attributeList CHR_DER
    (64) interdeclaration -> . VAR ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
    (65) interdeclaration -> . CONST ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
    (108) assigmentarray -> . listArray2 IGUAL expresion PUNTOCOMA
    (30) expresion -> . CORIZQ expressionList CORDER
    (31) expresion -> . ID PUNTO LENGHT
    (32) expresion -> . ID PUNTO INDEXOF PARIZQ expresion PARDER
    (33) expresion -> . ID PUNTO POP PARIZQ PARDER
    (35) expresion -> . ID PUNTO JOIN PARIZQ PARDER
    (46) expresion -> . PARSEINT PARIZQ expresion PARDER
    (47) expresion -> . PARSEFLOAT PARIZQ expresion PARDER
    (48) expresion -> . expresion PUNTO TOSTRING PARIZQ PARDER
    (49) expresion -> . ID PUNTO TOSTRING PARIZQ PARDER
    (50) expresion -> . TYPEOF expresion
    (78) expresion -> . expresion MAS expresion
    (79) expresion -> . expresion MENOS expresion
    (80) expresion -> . expresion POR expresion
    (81) expresion -> . expresion DIVIDIDO expresion
    (82) expresion -> . expresion MOD expresion
    (83) expresion -> . ID PARIZQ expressionList PARDER
    (84) expresion -> . ID PARIZQ PARDER
    (85) expresion -> . expresion MENORQUE expresion
    (86) expresion -> . expresion MAYORQUE expresion
    (87) expresion -> . expresion MENORIGUAL expresion
    (88) expresion -> . expresion MAYORIGUAL expresion
    (89) expresion -> . expresion TERN expresion DOSPUNTOS expresion
    (90) expresion -> . expresion AND expresion
    (91) expresion -> . expresion OR expresion
    (92) expresion -> . NOT expresion
    (93) expresion -> . expresion IGUALDAD expresion
    (94) expresion -> . expresion DIFERENTE expresion
    (95) expresion -> . MENOS expresion
    (96) expresion -> . PARIZQ expresion PARDER
    (97) expresion -> . ID PUNTO LCASE PARIZQ PARDER
    (98) expresion -> . ID PUNTO UPCASE PARIZQ PARDER
    (99) expresion -> . ENTERO
    (100) expresion -> . BOOLEANO
    (101) expresion -> . CADENA
    (102) expresion -> . listArray
    (103) expresion -> . DECIMAL
    (109) listArray2 -> . listArray2 CORIZQ expresion CORDER
    (110) listArray2 -> . listArray2 PUNTO ID
    (111) listArray2 -> . ID
    (112) listArray -> . listArray CORIZQ expresion CORDER
    (113) listArray -> . listArray PUNTO ID
    (114) listArray -> . ID

    CONSOLE         shift and go to state 24
    IF              shift and go to state 26
    VAR             shift and go to state 28
    WHILE           shift and go to state 30
    ID              shift and go to state 29
    FOR             shift and go to state 31
    BREAK           shift and go to state 32
    CONTINUE        shift and go to state 33
    FUNC            shift and go to state 35
    RETURN          shift and go to state 36
    SWITCH          shift and go to state 37
    CONST           shift and go to state 38
    INTERFACE       shift and go to state 39
    CORIZQ          shift and go to state 34
    PARSEINT        shift and go to state 41
    PARSEFLOAT      shift and go to state 42
    TYPEOF          shift and go to state 43
    NOT             shift and go to state 45
    MENOS           shift and go to state 44
    PARIZQ          shift and go to state 25
    ENTERO          shift and go to state 46
    BOOLEANO        shift and go to state 47
    CADENA          shift and go to state 48
    DECIMAL         shift and go to state 50

    s                              shift and go to state 1
    block                          shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    whileinstruction               shift and go to state 8
    instancia                      shift and go to state 9
    operadores                     shift and go to state 10
    forinstruction                 shift and go to state 11
    breakstmt                      shift and go to state 12
    continuestmt                   shift and go to state 13
    arraydeclaration               shift and go to state 14
    functionstmt                   shift and go to state 15
    call                           shift and go to state 16
    returnstmt                     shift and go to state 17
    pusheo                         shift and go to state 18
    switch_statement               shift and go to state 19
    constante                      shift and go to state 20
    interfacecreation              shift and go to state 21
    interdeclaration               shift and go to state 22
    assigmentarray                 shift and go to state 23
    expresion                      shift and go to state 27
    listArray2                     shift and go to state 40
    listArray                      shift and go to state 49

state 1

    (0) S' -> s .



state 2

    (1) s -> block .
    (2) block -> block . instruccion
    (4) instruccion -> . print PUNTOCOMA
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . declaration
    (7) instruccion -> . assignment
    (8) instruccion -> . whileinstruction
    (9) instruccion -> . instancia PUNTOCOMA
    (10) instruccion -> . operadores PUNTOCOMA
    (11) instruccion -> . forinstruction
    (12) instruccion -> . breakstmt PUNTOCOMA
    (13) instruccion -> . continuestmt
    (14) instruccion -> . arraydeclaration
    (15) instruccion -> . functionstmt
    (16) instruccion -> . call
    (17) instruccion -> . returnstmt
    (18) instruccion -> . pusheo
    (19) instruccion -> . switch_statement
    (20) instruccion -> . constante
    (21) instruccion -> . interfacecreation
    (22) instruccion -> . interdeclaration
    (23) instruccion -> . assigmentarray
    (24) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER
    (51) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE CHR_IZQ block CHR_DER
    (52) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER ELSE ifinstruction
    (53) ifinstruction -> . IF PARIZQ expresion PARDER CHR_IZQ block CHR_DER
    (25) declaration -> . VAR ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
    (27) assignment -> . VAR ID IGUAL expresion PUNTOCOMA
    (44) whileinstruction -> . WHILE PARIZQ expresion PARDER CHR_IZQ block CHR_DER
    (36) instancia -> . ID IGUAL expresion
    (37) operadores -> . expresion MAS MAS
    (45) forinstruction -> . FOR PARIZQ declaration expresion PUNTOCOMA operadores PARDER CHR_IZQ block CHR_DER
    (105) breakstmt -> . BREAK
    (104) continuestmt -> . CONTINUE PUNTOCOMA
    (29) arraydeclaration -> . VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expresion PUNTOCOMA
    (62) functionstmt -> . FUNC ID funcparams functype CHR_IZQ block CHR_DER
    (60) call -> . ID PARIZQ expressionList PARDER PUNTOCOMA
    (61) call -> . ID PARIZQ PARDER PUNTOCOMA
    (76) returnstmt -> . RETURN expresion PUNTOCOMA
    (77) returnstmt -> . RETURN PUNTOCOMA
    (34) pusheo -> . ID PUNTO PUSH PARIZQ expresion PARDER PUNTOCOMA
    (54) switch_statement -> . SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement default_case CHR_DER
    (55) switch_statement -> . SWITCH PARIZQ expresion PARDER CHR_IZQ cases_statement CHR_DER
    (26) constante -> . CONST ID DOSPUNTOS type IGUAL expresion PUNTOCOMA
    (28) constante -> . CONST ID IGUAL expresion PUNTOCOMA
    (63) interfacecreation -> . INTERFACE ID CHR_IZQ attributeList CHR_DER
    (64) interdeclaration -> . VAR ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
    (65) interdeclaration -> . CONST ID DOSPUNTOS ID IGUAL CHR_IZQ interfaceContent CHR_DER PUNTOCOMA
    (108) assigmentarray -> . listArray2 IGUAL expresion PUNTOCOMA
    (30) expresion -> . CORIZQ expressionList CORDER
    (31) expresion -> . ID PUNTO LENGHT
    (32) expresion -> . ID PUNTO INDEXOF PARIZQ expresion PARDER
    (33) expresion -> . ID PUNTO POP PARIZQ PARDER
    (35) expresion -> . ID PUNTO JOIN PARIZQ PARDER
    (46) expresion -> . PARSEINT PARIZQ expresion PARDER
    (47) expresion -> . PARSEFLOAT PARIZQ expresion PARDER
    (48) expresion -> . expresion PUNTO TOSTRING PARIZQ PARDER
    (49) expresion -> . ID PUNTO TOSTRING PARIZQ PARDER
    (50) expresion -> . TYPEOF expresion
    (78) expresion -> . expresion MAS expresion
    (79) expresion -> . expresion MENOS expresion
    (80) expresion -> . expresion POR expresion
    (81) expresion -> . expresion DIVIDIDO expresion
    (82) expresion -> . expresion MOD expresion
    (83) expresion -> . ID PARIZQ expressionList PARDER
    (84) expresion -> . ID PARIZQ PARDER
    (85) expresion -> . expresion MENORQUE expresion
    (86) expresion -> . expresion MAYORQUE expresion
    (87) expresion -> . expresion MENORIGUAL expresion
    (88) expresion -> . expresion MAYORIGUAL expresion
    (89) expresion -> . expresion TERN expresion DOSPUNTOS expresion
    (90) expresion -> . expresion AND expresion
    (91) expresion -> . expresion OR expresion
    (92) expresion -> . NOT expresion
    (93) expresion -> . expresion IGUALDAD expresion
    (94) expresion -> . expresion DIFERENTE expresion
    (95) expresion -> . MENOS expresion
    (96) expresion -> . PARIZQ expresion PARDER
    (97) expresion -> . ID PUNTO LCASE PARIZQ PARDER
    (98) expresion -> . ID PUNTO UPCASE PARIZQ PARDER
    (99) expresion -> . ENTERO
    (100) expresion -> . BOOLEANO
    (101) expresion -> . CADENA
    (102) expresion -> . listArray
    (103) expresion -> . DECIMAL
    (109) listArray2 -> . listArray2 CORIZQ expresion CORDER
    (110) listArray2 -> . listArray2 PUNTO ID
    (111) listArray2 -> . ID
    (112) listArray -> . listArray CORIZQ expresion CORDER
    (113) listArray -> . listArray PUNTO ID
    (114) listArray -> . ID

    $end            reduce using rule 1 (s -> block .)
    CONSOLE         shift and go to state 24
    IF              shift and go to state 26
    VAR             shift and go to state 28
    WHILE           shift and go to state 30
    ID              shift and go to state 29
    FOR             shift and go to state 31
    BREAK           shift and go to state 32
    CONTINUE        shift and go to state 33
    FUNC            shift and go to state 35
    RETURN          shift and go to state 36
    SWITCH          shift and go to state 37
    CONST           shift and go to state 38
    INTERFACE       shift and go to state 39
    CORIZQ          shift and go to state 34
    PARSEINT        shift and go to state 41
    PARSEFLOAT      shift and go to state 42
    TYPEOF          shift and go to state 43
    NOT             shift and go to state 45
    MENOS           shift and go to state 44
    PARIZQ          shift and go to state 25
    ENTERO          shift and go to state 46
    BOOLEANO        shift and go to state 47
    CADENA          shift and go to state 48
    DECIMAL         shift and go to state 50

    instruccion                    shift and go to state 51
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    whileinstruction               shift and go to state 8
    instancia                      shift and go to state 9
    operadores                     shift and go to state 10
    forinstruction                 shift and go to state 11
    breakstmt                      shift and go to state 12
    continuestmt                   shift and go to state 13
    arraydeclaration               shift and go to state 14
    functionstmt                   shift and go to state 15
    call                           shift and go to state 16
    returnstmt                     shift and go to state 17
    pusheo                         shift and go to state 18
    switch_statement               shift and go to state 19
    constante                      shift and go to state 20
    interfacecreation              shift and go to state 21
    interdeclaration               shift and go to state 22
    assigmentarray                 shift and go to state 23
    expresion                      shift and go to state 27
    listArray2                     shift and go to state 40
    listArray                      shift and go to state 49

state 3

    (3) block -> instruccion .

    CONSOLE         reduce using rule 3 (block -> instruccion .)
    IF              reduce using rule 3 (block -> instruccion .)
    VAR             reduce using rule 3 (block -> instruccion .)
    WHILE           reduce using rule 3 (block -> instruccion .)
    ID              reduce using rule 3 (block -> instruccion .)
    FOR             reduce using rule 3 (block -> instruccion .)
    BREAK           reduce using rule 3 (block -> instruccion .)
    CONTINUE        reduce using rule 3 (block -> instruccion .)
    FUNC            reduce using rule 3 (block -> instruccion .)
    RETURN          reduce using rule 3 (block -> instruccion .)
    SWITCH          reduce using rule 3 (block -> instruccion .)
    CONST           reduce using rule 3 (block -> instruccion .)
    INTERFACE       reduce using rule 3 (block -> instruccion .)
    CORIZQ          reduce using rule 3 (block -> instruccion .)
    PARSEINT        reduce using rule 3 (block -> instruccion .)
    PARSEFLOAT      reduce using rule 3 (block -> instruccion .)
    TYPEOF          reduce using rule 3 (block -> instruccion .)
    NOT             reduce using rule 3 (block -> instruccion .)
    MENOS           reduce using rule 3 (block -> instruccion .)
    PARIZQ          reduce using rule 3 (block -> instruccion .)
    ENTERO          reduce using rule 3 (block -> instruccion .)
    BOOLEANO        reduce using rule 3 (block -> instruccion .)
    CADENA          reduce using rule 3 (block -> instruccion .)
    DECIMAL         reduce using rule 3 (block -> instruccion .)
    $end            reduce using rule 3 (block -> instruccion .)
    CHR_DER         reduce using rule 3 (block -> instruccion .)
    DEFAULT         reduce using rule 3 (block -> instruccion .)
    CASE            reduce using rule 3 (block -> instruccion .)


state 4

    (4) instruccion -> print . PUNTOCOMA

    PUNTOCOMA       shift and go to state 52


state 5

    (5) instruccion -> ifinstruction .

    CONSOLE         reduce using rule 5 (instruccion -> ifinstruction .)
    IF              reduce using rule 5 (instruccion -> ifinstruction .)
    VAR             reduce using rule 5 (instruccion -> ifinstruction .)
    WHILE           reduce using rule 5 (instruccion -> ifinstruction .)
    ID              reduce using rule 5 (instruccion -> ifinstruction .)
    FOR             reduce using rule 5 (instruccion -> ifinstruction .)
    BREAK           reduce using rule 5 (instruccion -> ifinstruction .)
    CONTINUE        reduce using rule 5 (instruccion -> ifinstruction .)
    FUNC            reduce using rule 5 (instruccion -> ifinstruction .)
    RETURN          reduce using rule 5 (instruccion -> ifinstruction .)
    SWITCH          reduce using rule 5 (instruccion -> ifinstruction .)
    CONST           reduce using rule 5 (instruccion -> ifinstruction .)
    INTERFACE       reduce using rule 5 (instruccion -> ifinstruction .)
    CORIZQ          reduce using rule 5 (instruccion -> ifinstruction .)
    PARSEINT        reduce using rule 5 (instruccion -> ifinstruction .)
    PARSEFLOAT      reduce using rule 5 (instruccion -> ifinstruction .)
    TYPEOF          reduce using rule 5 (instruccion -> ifinstruction .)
    NOT             reduce using rule 5 (instruccion -> ifinstruction .)
    MENOS           reduce using rule 5 (instruccion -> ifinstruction .)
    PARIZQ          reduce using rule 5 (instruccion -> ifinstruction .)
    ENTERO          reduce using rule 5 (instruccion -> ifinstruction .)
    BOOLEANO        reduce using rule 5 (instruccion -> ifinstruction .)
    CADENA          reduce using rule 5 (instruccion -> ifinstruction .)
    DECIMAL         reduce using rule 5 (instruccion -> ifinstruction .)
    $end            reduce using rule 5 (instruccion -> ifinstruction .)
    CHR_DER         reduce using rule 5 (instruccion -> ifinstruction .)
    DEFAULT         reduce using rule 5 (instruccion -> ifinstruction .)
    CASE            reduce using rule 5 (instruccion -> ifinstruction .)


state 6

    (6) instruccion -> declaration .

    CONSOLE         reduce using rule 6 (instruccion -> declaration .)
    IF              reduce using rule 6 (instruccion -> declaration .)
    VAR             reduce using rule 6 (instruccion -> declaration .)
    WHILE           reduce using rule 6 (instruccion -> declaration .)
    ID              reduce using rule 6 (instruccion -> declaration .)
    FOR             reduce using rule 6 (instruccion -> declaration .)
    BREAK           reduce using rule 6 (instruccion -> declaration .)
    CONTINUE        reduce using rule 6 (instruccion -> declaration .)
    FUNC            reduce using rule 6 (instruccion -> declaration .)
    RETURN          reduce using rule 6 (instruccion -> declaration .)
    SWITCH          reduce using rule 6 (instruccion -> declaration .)
    CONST           reduce using rule 6 (instruccion -> declaration .)
    INTERFACE       reduce using rule 6 (instruccion -> declaration .)
    CORIZQ          reduce using rule 6 (instruccion -> declaration .)
    PARSEINT        reduce using rule 6 (instruccion -> declaration .)
    PARSEFLOAT      reduce using rule 6 (instruccion -> declaration .)
    TYPEOF          reduce using rule 6 (instruccion -> declaration .)
    NOT             reduce using rule 6 (instruccion -> declaration .)
    MENOS           reduce using rule 6 (instruccion -> declaration .)
    PARIZQ          reduce using rule 6 (instruccion -> declaration .)
    ENTERO          reduce using rule 6 (instruccion -> declaration .)
    BOOLEANO        reduce using rule 6 (instruccion -> declaration .)
    CADENA          reduce using rule 6 (instruccion -> declaration .)
    DECIMAL         reduce using rule 6 (instruccion -> declaration .)
    $end            reduce using rule 6 (instruccion -> declaration .)
    CHR_DER         reduce using rule 6 (instruccion -> declaration .)
    DEFAULT         reduce using rule 6 (instruccion -> declaration .)
    CASE            reduce using rule 6 (instruccion -> declaration .)


state 7

    (7) instruccion -> assignment .

    CONSOLE         reduce using rule 7 (instruccion -> assignment .)
    IF              reduce using rule 7 (instruccion -> assignment .)
    VAR             reduce using rule 7 (instruccion -> assignment .)
    WHILE           reduce using rule 7 (instruccion -> assignment .)
    ID              reduce using rule 7 (instruccion -> assignment .)
    FOR             reduce using rule 7 (instruccion -> assignment .)
    BREAK           reduce using rule 7 (instruccion -> assignment .)
    CONTINUE        reduce using rule 7 (instruccion -> assignment .)
    FUNC            reduce using rule 7 (instruccion -> assignment .)
    RETURN          reduce using rule 7 (instruccion -> assignment .)
    SWITCH          reduce using rule 7 (instruccion -> assignment .)
    CONST           reduce using rule 7 (instruccion -> assignment .)
    INTERFACE       reduce using rule 7 (instruccion -> assignment .)
    CORIZQ          reduce using rule 7 (instruccion -> assignment .)
    PARSEINT        reduce using rule 7 (instruccion -> assignment .)
    PARSEFLOAT      reduce using rule 7 (instruccion -> assignment .)
    TYPEOF          reduce using rule 7 (instruccion -> assignment .)
    NOT             reduce using rule 7 (instruccion -> assignment .)
    MENOS           reduce using rule 7 (instruccion -> assignment .)
    PARIZQ          reduce using rule 7 (instruccion -> assignment .)
    ENTERO          reduce using rule 7 (instruccion -> assignment .)
    BOOLEANO        reduce using rule 7 (instruccion -> assignment .)
    CADENA          reduce using rule 7 (instruccion -> assignment .)
    DECIMAL         reduce using rule 7 (instruccion -> assignment .)
    $end            reduce using rule 7 (instruccion -> assignment .)
    CHR_DER         reduce using rule 7 (instruccion -> assignment .)
    DEFAULT         reduce using rule 7 (instruccion -> assignment .)
    CASE            reduce using rule 7 (instruccion -> assignment .)


state 8

    (8) instruccion -> whileinstruction .
